[metadata]
name = icinga2_usersyncd
version = 0.1.1
author = Paul Wolneykien
author_email = manowar@altlinux.org
description = A daemon to synchronize ApiUser entries with Host agents on an Icinga 2 instance
keywords =
    icinga
    icinga2
license = GPL-2.0-or-later
classifiers =
    Topic :: System :: Monitoring
    Topic :: System :: Networking :: Monitoring
    Programming Language :: Python :: 3
long_description = file: README.md
url = http://git.altlinux.org/people/manowar/packages/icinga2-usersyncd.git

[options]
packages = icinga2_usersyncd
include_package_data = True
requires-python = >=3.7
install_requires =
    icinga2apic

[options.package_data]
icinga2_usersyncd =
    *.conf
    *.sysconfig
    *.service
    *.1

[options.entry_points]
console_scripts =
    icinga2-usersyncd = icinga2_usersyncd.cli:main
